Flight create and put request Swagger documentation
